GNOME Bugzilla – Bug 737150
GLib-GIO-WARNING **: Failed to parse translated string 'visible-name\u0004'Unnamed'' for key 'visible-name' in schema 'org.gnome.Terminal.Legacy.Profile': 0:expected value
Last modified: 2015-04-17 18:55:02 UTC
With Debian Sid/unstable and GNOME Terminal 3.12.3 (gnome-terminal 3.12.3-2) the following messages are written to `/var/log/syslog`. Sep 23 07:21:16 my-e350m1 org.gnome.Terminal[2746]: (gnome-terminal-server:2866): GLib-GIO-WARNING **: Failed to parse translated string 'visible-name\u0004'Unnamed'' for key 'visible-name' in schema 'org.gnome.Terminal.Legacy.Profile': 0:expected value Sep 23 07:21:16 my-e350m1 org.gnome.Terminal[2746]: (gnome-terminal-server:2866): GLib-GIO-WARNING **: Using untranslated default instead.
Turns out this is a bug in the translations: https://mail.gnome.org/archives/gnome-i18n/2014-September/msg00155.html